01 uploading working files

--- a/01_indecision/package.json
+++ b/01_indecision/package.json
@@ -6,6 +6,9 @@
   "license": "MIT",
   "dependencies": {
     "babel-preset-env": "1.5.2",
-    "babel-preset-react": "6.24.1"
+    "babel-preset-react": "6.24.1",
+    "bootstrap": "^4.3.1",
+    "react": "^16.8.6",
+    "react-bootstrap": "^1.0.0-beta.10"
   }
 }
