--- a/01_indecision/package.json
+++ b/01_indecision/package.json
@@ -9,6 +9,7 @@
     "babel-preset-react": "6.24.1",
     "bootstrap": "^4.3.1",
     "react": "^16.8.6",
-    "react-bootstrap": "^1.0.0-beta.10"
+    "react-bootstrap": "^1.0.0-beta.10",
+    "react-dom": "^16.8.6"
   }
 }
