--- a/01_indecision/package.json
+++ b/01_indecision/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "@babel/cli": "^7.5.5",
     "@babel/core": "^7.5.5",
+    "@babel/polyfill": "^7.4.4",
     "@babel/preset-env": "^7.5.5",
     "@babel/preset-react": "^7.0.0",
     "babel-preset-env": "1.5.2",
