--- a/01_indecision/package.json
+++ b/01_indecision/package.json
@@ -13,6 +13,7 @@
     "@babel/core": "^7.5.5",
     "@babel/preset-env": "^7.5.5",
     "@babel/preset-react": "^7.0.0",
+    "eslint": "^6.2.1",
     "react": "^16.9.0",
     "react-dom": "^16.9.0"
   },
