01 finished setting up webpack

--- a/01_indecision/package.json
+++ b/01_indecision/package.json
@@ -7,7 +7,7 @@
     "build": "babel src/app.js --out-file=public/scripts/app.js",
     "watch": "babel src/app.js --out-file=public/scripts/app.js -w",
     "serve": "live-server public/",
-    "build-webpack": "webpack"
+    "build-webpack": "webpack --watch"
   },
   "author": "nathan",
   "license": "ISC",
