--- a/01_indecision/package.json
+++ b/01_indecision/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "bootstrap": "^4.3.1",
     "npx": "^10.2.0",
+    "validator": "^11.1.0",
     "webpack": "^3.1.0"
   }
 }
