--- a/01_indecision/package.json
+++ b/01_indecision/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^16.9.0"
   },
   "dependencies": {
+    "babel-loader": "^8.0.6",
     "bootstrap": "^4.3.1",
     "npx": "^10.2.0",
     "validator": "^11.1.0",
