--- a/01_indecision/package.json
+++ b/01_indecision/package.json
@@ -14,12 +14,12 @@
     "@babel/cli": "^7.5.5",
     "@babel/core": "^7.5.5",
     "@babel/preset-env": "^7.5.5",
-    "@babel/preset-react": "^7.0.0",
-    "react": "^16.9.0",
-    "react-dom": "^16.9.0"
+    "@babel/preset-react": "^7.0.0"
   },
   "dependencies": {
     "bootstrap": "^4.3.1",
-    "npx": "^10.2.0"
+    "npx": "^10.2.0",
+    "react": "^16.11.0",
+    "react-dom": "^16.11.0"
   }
 }
