--- a/01_indecision/package.json
+++ b/01_indecision/package.json
@@ -19,10 +19,12 @@
     "@babel/core": "^7.7.2",
     "@babel/preset-env": "^7.7.1",
     "@babel/preset-react": "^7.7.0",
+    "babel-loader": "^8.0.6",
     "bootstrap": "^4.3.1",
     "npx": "^10.2.0",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
+    "validator": "^12.0.0",
     "webpack": "^4.41.2"
   }
 }
