--- a/01_indecision/package.json
+++ b/01_indecision/package.json
@@ -4,10 +4,9 @@
   "description": "first course project",
   "main": "index.js",
   "scripts": {
-    "build-babel": "babel src/playground/app.js --out-file=public/scripts/app.js",
-    "watch-babel": "babel src/playground/app.js --out-file=public/scripts/app.js -w",
-    "build": "webpack -w",
-    "serve": "live-server public/"
+    "build": "webpack",
+    "serve": "live-server public/",
+    "devServer": "webpack-dev-server"
   },
   "author": "nathan",
   "license": "ISC",
@@ -25,6 +24,7 @@
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
     "validator": "^12.0.0",
-    "webpack": "^4.41.2"
+    "webpack": "^4.41.2",
+    "webpack-dev-server": "^3.9.0"
   }
 }
