--- a/01_indecision/package.json
+++ b/01_indecision/package.json
@@ -24,6 +24,7 @@
     "npx": "^10.2.0",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
+    "react-modal": "^3.11.1",
     "semantic-ui-react": "^0.88.1",
     "validator": "^12.0.0",
     "webpack": "^4.41.2",
