Setup for new Expensify App

--- a/02_expensify/package.json
+++ b/02_expensify/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "boilerplate",
+  "name": "expensify_app",
   "version": "1.0.0",
-  "description": "boilerplace description",
+  "description": "App to track expenses",
   "main": "index.js",
   "scripts": {
     "build": "webpack",
@@ -20,13 +20,15 @@
     "bootstrap": "^4.3.1",
     "css-loader": "^3.2.0",
     "node-sass": "^4.13.0",
-    "normalize.css": "^8.0.1",
+    "normalize.css": "^7.0.0",
     "npx": "^10.2.0",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
     "react-modal": "^3.11.1",
+    "react-router-dom": "^5.1.2",
     "sass-loader": "^8.0.0",
     "semantic-ui-react": "^0.88.1",
+    "style-loader": "^1.0.0",
     "validator": "^12.0.0",
     "webpack": "^4.41.2",
     "webpack-cli": "^3.3.10",
