--- a/02_expensify/package.json
+++ b/02_expensify/package.json
@@ -26,6 +26,7 @@
     "react-dom": "^16.11.0",
     "react-modal": "^3.11.1",
     "react-router-dom": "^5.1.2",
+    "redux": "^4.0.4",
     "sass-loader": "^8.0.0",
     "semantic-ui-react": "^0.88.1",
     "style-loader": "^1.0.0",
