--- a/02_expensify/package.json
+++ b/02_expensify/package.json
@@ -25,6 +25,7 @@
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
     "react-modal": "^3.11.1",
+    "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
     "redux": "^4.0.4",
     "sass-loader": "^8.0.0",
